# backend/src/routes/index.ts
@@ -9,6 +9,8 @@ import reportRoutes from './report.routes';
 import docsRoutes from './docs.routes';
 import adminRoutes from './admin.routes';
 import adminAuthRoutes from './admin-auth.routes';
+import adminReportRoutes from './admin-report.routes';
+import adminSettingsRoutes from './admin-settings.routes';
 import directAdminAuthRoutes from './direct-admin-auth.routes';
 import analyticsRoutes from './analytics.routes';
 import planRoutes from './plan.routes';
@@ -32,6 +34,8 @@ router.use('/reports', reportRoutes);
 router.use('/docs', docsRoutes);
 router.use('/admin', adminRoutes);
 router.use('/admin-auth', adminAuthRoutes);
+router.use('/admin/reports', adminReportRoutes);
+router.use('/admin/settings', adminSettingsRoutes);
 router.use('/direct-admin-auth', directAdminAuthRoutes);
 router.use('/analytics', analyticsRoutes);
 router.use('/plans', planRoutes);
